--- a/css/styles.css
+++ b/css/styles.css
@@ -2946,13 +2946,13 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #fff;
-  background-color: #1D809F;
-  border-color: #1D809F;
+  background-color: #D1570D;
+  border-color: #ffffff;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #196d87;
-  border-color: #17667f;
+  background-color: #91481b;
+  border-color: #f8f8f8;
 }
 .btn-check:focus + .btn-primary, .btn-primary:focus {
   color: #fff;
@@ -10840,6 +10840,7 @@ body,
 html {
   width: 100%;
   height: 100%;
+  background-color: #FDE792;
 }
 
 #header {
@@ -11002,7 +11003,7 @@ footer.footer .social-link {
   width: 4rem;
   line-height: 4.3rem;
   font-size: 1.5rem;
-  background-color: #1D809F;
+  background-color: #5A1F00;
   transition: background-color 0.15s ease-in-out;
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
 }
@@ -11112,15 +11113,15 @@ footer.footer .social-link:hover {
             clip-path: inset(2rem);
   }
   .portfolio-item:hover .caption {
-    background-color: rgba(29, 128, 159, 0.9);
+    background-color: #d1580d3d;
     -webkit-clip-path: inset(2rem);
             clip-path: inset(2rem);
   }
 }
 
 .service-icon {
-  background-color: #fff;
-  color: #1D809F;
+  background-color: #FDE792;
+  color: #5A1F00;
   height: 7rem;
   width: 7rem;
   display: block;
