--- a/css/styles.css
+++ b/css/styles.css
@@ -10898,7 +10898,7 @@ html {
   height: 100%;
   transition: all 0.4s ease 0s;
   transform: translateX(250px);
-  background: #1D809F;
+  background: #000000;
   border-left: 1px solid rgba(255, 255, 255, 0.1);
 }
 
@@ -10921,7 +10921,7 @@ html {
 .sidebar-nav li a:hover {
   text-decoration: none;
   color: #fff;
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(121, 119, 119, 0.2);
 }
 
 .sidebar-nav li a:active,
@@ -10931,7 +10931,7 @@ html {
 
 .sidebar-nav > .sidebar-brand {
   font-size: 1.2rem;
-  background: rgba(52, 58, 64, 0.1);
+  background: #000000;
   height: 80px;
   line-height: 50px;
   padding-top: 15px;
