--- a/css/styles.css
+++ b/css/styles.css
@@ -11008,7 +11008,7 @@ footer.footer .social-link {
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
 }
 footer.footer .social-link:hover {
-  background-color: #155d74;
+  background-color: #331606;
   text-decoration: none;
 }
 
